style.css
:root {

    --ff-primary: 'Plus Jakarta Sans', sans-serif;
    
    --fw-medium: 500;
    --fw-bold: 700;
    --fw-extrabold: 800;

    --clr-slate: #666CA3;
    --clr-navy: #13183F;
    --clr-gray: #83869A;
    --clr-coral: #F74780;    
    --clr-pink: #FFA7C3;
    --clr-white: #fff;
    --lg-sunrise: linear-gradient(#FF6F48, #F02AA6);
    --lg-sunset: linear-gradient(#4851FF, #F02AA6);
    --lg-background: linear-gradient(#fff, #F0F1FF);
}


/* === RESET === */

html {
    box-sizing: border-box;
  }
  
  *, *:before, *:after {
    box-sizing: inherit;
  }
  
  body, h1, h2, h3, h4, h5, h6, p, ol, ul {
    margin: 0;
    padding: 0;
    font-weight: normal;
    font-size: 100%;
	font: inherit;
	vertical-align: baseline;
  }
  
  ol, ul {
    list-style: none;
  }
  
  img {
    max-width: 100%;
    height: auto;
  }

a {
    text-decoration: none;
}

/* ================= */

body {
    font-family: var(--ff-primary);
    color: var(--clr-gray); 
}

.btn {
    background-color: var(--clr-navy);
    padding: 0.625em 1.5em;
    border-radius: 500em;
    color: var(--clr-white);
    font-weight: var(--fw-bold);
    display: inline-block;
}

.btn:hover {
    background-color: var(--clr-slate);
}

.btn-sunrise {
    background-image: var(--lg-sunrise);
    padding: 1em 2em;
    margin-bottom: 2.875em;
}

.btn-sunset {
    background-image: var(--lg-sunset);
}

.btn-sunrise:hover,
.btn-sunset:hover {
    box-shadow: inset 0 0 0 1000px #ffffff80;
}

nav {
    display: flex;
    justify-content: space-between;
    padding: 1em;
}

.intro {
    padding: 0 1em;
}

.intro-header {
    font-weight: var(--fw-extrabold);
    color: var(--clr-navy);
    font-size: 2.5rem;
    margin-top: 1em;
    margin-bottom: 0.625em;
}

.hero-image-mobile {
    width: 100%;
}

.hero-image-tablet,
.hero-image-desktop {
    display: none;
}

.text-body {
    font-size: 1rem;
    line-height: 1.625em;
    margin-bottom: 1.5em;
    font-weight: var(--fw-medium);
}

.courses {
    background-image: var(--lg-background);
    padding: 0 1em 2.5em 1em;
}

.cards {
    display: grid;
    grid-template-columns: 1fr;
    row-gap: 3em;
}

.card {
    background-color: var(--clr-white);
    padding: 3.5em 1.75em 2em 1.75em;
    border-radius: 0.625em;
    box-shadow: 0px 25px 50px 0px hsla(233, 92%, 29%, 0.04);
    position: relative;
}

.icon {
    position: absolute;
    left: 6%;
    top: -10%;
}

.card h3 {
    font-weight: var(--fw-extrabold);
    color: var(--clr-navy);
    font-size: 1.25em;
    line-height: 1.125em;
    margin-bottom: 0.825em;
}

.text-link {
    color: var(--clr-coral);
    font-weight: var(--fw-bold);
    font-size: 1.125em;
    line-height: 1.125em;
}

.card:first-child {
    background-image: var(--lg-sunrise);
    padding: 1.5em;
    color: var(--clr-white);
    font-weight: var(--fw-extrabold);
    font-size: 1.5em;
}

footer {
    background-color: var(--clr-navy);
}

.footer-nav {
    display: flex;
    justify-content: space-between;
    padding: 2em 1em;
}

/* === TABLET (768px) === */
@media (min-width: 48em) {
    .wrapper{
        max-width: 64em;
        margin: 0 auto;
    }

    nav {
        padding: 1.5em;
    }

    .intro {
        padding: 0 1.5em;
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        margin-bottom: 2em;
    }

    .hero-left {
        grid-column: 1/7;
    }

    .hero-right {
        grid-column: 7/-1;
    }

    .hero-image-mobile {
        display: none;
    }

    .hero-image-tablet {
        display: block;
        width: 100%;
        /* position: relative;
        top: -20%;
        right: -40%;
        z-index: -1; */
    }

  .cards {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-auto-flow: 1fr;
        column-gap: 1em;
        row-gap: 3em;
    }
}

/* === DESKTOP (1440px) === */
@media (min-width: 90em) {

    .hero-image-tablet {
        display: none;
    }

    .hero-image-desktop {
        display: inline-block;
    }

    .wrapper{
        max-width: 69.375em;
        margin: 0 auto;
    }

    .cards {
        grid-template-columns: 1fr 1fr 1fr;
    }

    .intro {
        margin-bottom: 2em;
    }

    .intro-header {
        font-size: 3.5rem;
        margin-top: 1.25em;
        margin-bottom: 0.625em;
    }
}

